WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197753
[iOS] Numpad comma key has incorrect keyIdentifier property
https://bugs.webkit.org/show_bug.cgi?id=197753
Summary
[iOS] Numpad comma key has incorrect keyIdentifier property
Daniel Bates
Reported
2019-05-09 14:00:37 PDT
On JIS keyboards they have a Num Pad Comma key. DOM key events dispatched when this key are pressed and released have keyIdentifier property equal to Unidentified instead of Numpad Comma. We should fix this.
Attachments
Patch
(12.95 KB, patch)
2019-05-09 14:25 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
To land
(12.82 KB, patch)
2019-05-09 15:59 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-05-09 14:01:12 PDT
<
rdar://problem/50636274
>
Daniel Bates
Comment 2
2019-05-09 14:25:24 PDT
Created
attachment 369521
[details]
Patch
Brent Fulgham
Comment 3
2019-05-09 14:32:03 PDT
Comment on
attachment 369521
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=369521&action=review
Japanese keyboard users will be very happy! r=me.
> Source/WebCore/ChangeLog:14 > + ",", which is what.
which is what WHAT! :-)
Daniel Bates
Comment 4
2019-05-09 14:38:43 PDT
(In reply to Brent Fulgham from
comment #3
)
> Comment on
attachment 369521
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=369521&action=review
> > Japanese keyboard users will be very happy! r=me. > > > Source/WebCore/ChangeLog:14 > > + ",", which is what. > > which is what WHAT! :-)
Haha. What we wanted 😀
Daniel Bates
Comment 5
2019-05-09 15:59:03 PDT
Created
attachment 369528
[details]
To land
Daniel Bates
Comment 6
2019-05-09 15:59:43 PDT
Committed
r245161
: <
https://trac.webkit.org/changeset/245161
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug